docs: improve project documentation